@@ -61,7 +61,6 @@
     <style name="KeepassDXStyle.Dark.Dialog" parent="KeepassDXStyle.Night.Dialog">
         <item name="colorAccent">#fefefe</item>
         <item name="android:textColorPrimary">@color/cyan_lighter</item>
-        <item name="android:background">@color/darker</item>
         <item name="background">@color/darker</item>
     </style>
     <!-- CardView -->
