@@ -2,6 +2,7 @@ KeePassDX(2.8.6)
  * Fix Autofill recognition #712
  * Keep value after renaming custom field #709
  * Prevent random binary bug #713
+ * Fix dialog background #717
 
 KeePassDX(2.8.5)
  * Fix Base 64 #708
